<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/app_name_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconetopo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/app_name"
        android:textSize="38sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layTudo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edtN1"
                android:text="@string/strnota1" />

            <EditText
                android:id="@+id/edtN1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/strnota1"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edtN2"
                android:text="@string/strnota2" />

            <EditText
                android:id="@+id/edtN2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/strnota2"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:onClick="calcular"
                android:text="@string/strCalc"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strMedia" />

            <TextView
                android:id="@+id/txtMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strZero"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSit" />

            <TextView
                android:id="@+id/txtSituacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSitReprovado"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imgSituacao"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/strSit"
                app:srcCompat="@drawable/emojireprovado"
                tools:ignore="LabelFor" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>